--- a/css/Sass/styles.scss
+++ b/css/Sass/styles.scss
@@ -8,6 +8,7 @@
 @import "sombras";
 @import "labiales";
 @import "esmaltes";
+@import "responsive";
 
 
 body{
@@ -15,3 +16,4 @@ body{
     padding: 0;
     background-color: $colorbg;
 }
+
