--- a/css/Sass/_delineadores.scss
+++ b/css/Sass/_delineadores.scss
@@ -53,11 +53,28 @@
     filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25))
 }
 .delineadores-firstBlock--details a img{
-    width: 42px;
-    height: 37px;
+    width: 30px;
+    height: 24px;
     margin-right: $twentySize
 }
 .delineadores-second{
     margin-top: $onehundredSize;
 
 }
+
+/*@media screen and (max-width:1024px){
+   .delineadores .delineadores-firstBlock{
+         display: grid;
+         grid-template-columns: auto auto auto;
+         grid-gap: 50px 93px;
+     }
+ }
+ @media screen and (max-width:767px){
+   
+    .delineadores .delineadores-firstBlock{
+        display: grid;
+        grid-template-columns: auto auto;
+        grid-gap: 50px 93px;
+    }
+  
+}*/
