responsive ajustado, carrousel y logica del carrito

--- a/css/Sass/_delineadores.scss
+++ b/css/Sass/_delineadores.scss
@@ -57,6 +57,9 @@
     height: 24px;
     margin-right: $twentySize
 }
+.delineadores-firstBlock--details--img{
+    background-color: #962671;
+}
 .delineadores-second{
     margin-top: $onehundredSize;
 
