--- a/css/Sass/_labiales.scss
+++ b/css/Sass/_labiales.scss
@@ -57,6 +57,9 @@
     height: 24px;
     margin-right: $twentySize
 }
+.labiales-firstBlock--details--img{
+    background-color: #962671;
+}
 .labiales-second{
     margin-top: $onehundredSize;
 
