--- a/css/Sass/_footer.scss
+++ b/css/Sass/_footer.scss
@@ -33,6 +33,9 @@
 }
 
 @media screen and (max-width: 1024px) {
+    .footer{
+        width: 100%;
+    }
 
     .footer .footer-col1 ul li{
         font-size: 14px;
@@ -44,13 +47,33 @@
 @media screen and (max-width: 768px) {
 
     .footer {
-        width: 132%;
+        width: 100%;
       }
 }
 @media screen and (max-width: 480px) {
       
     .footer {
-        width: 99%;
+        width: 100%;
       }
+    .footer-col3{
+        margin: 25px 0 0 13px;
+    }
+
+}
+@media screen and (max-width: 320px) {
+      
+    .footer {
+        width: 100%;
+      }
+      .footer .footer-col1{
+        margin: 25px 0px 0px 0px;
+    }
+    .footer .footer-col2{
+        margin: 25px 0px 0px 13px;
+    }
+
+    .footer .footer-col3{
+        margin: 42px 0px 0px 5px
+    }
 
 }
