--- a/css/Sass/_home.scss
+++ b/css/Sass/_home.scss
@@ -1,9 +1,42 @@
 @import "variables";
 
+
 .carrousel{
-    width: $widht;
+    width: 95%;
+    margin: auto;
+    overflow: hidden;
 }
-.carrousel-img img{
+.carrousel ul{
+    display: flex;
+    padding: 0;
+    width: 400%;
+
+    animation: cambio 20s infinite;
+    animation-direction: alternate;
+}
+.carrousel  li{
+    width: 100%;
+    list-style: none;
+}
+.carrousel img{
+    width: 100%;
+    height: 80%;
+}
+@keyframes cambio{
+    0% {margin-left: 0;}
+    20% {margin-left: 0;} 
+
+    25% {margin-left: -100%;} 
+    45% {margin-left: -100%;} 
+
+    50% {margin-left: -200%;} 
+    70% {margin-left: -200%;} 
+
+    75% {margin-left: -300%;} 
+    100% {margin-left: -300%;}
+    
+}
+/*.carrousel-img img{
     display: flex;
     justify-content: center;
     margin: 25px auto 0;
@@ -11,7 +44,7 @@
     height: $carrouselHeight;
 
    
-}
+}*/
 .masVendido{
     width: $widht;
 
@@ -25,6 +58,7 @@
      
 }
 
+
 .masVendido-img{
     display: grid;
     grid-template-columns: auto auto auto auto;
@@ -37,18 +71,31 @@
           
      }
      .masVendido-img--details span{
-        display: flex;
-        justify-content: center;
+        text-align: center;
         font-size: $fontSize;
+        margin-bottom: 10px;
     }
-   
+    
 }
+   
+
 .masVendido-img img{
     width: $cardWidth;
     height: $cardHeight;
 }
 
+.masVendido-img--details{
+    display: flex;
+    flex-direction: column;
+    transition: all 0.25s;
+    border-radius: 10px;
+    cursor: pointer;
+}
 
+.masVendido-img--details:hover{
+    transform: translateY(-15px);
+    box-shadow: 0 12px 16px rgba(0, 0, 0, 0.2);
+  }
 
 .novedades{
     width: $widht;
@@ -62,6 +109,17 @@
     justify-content: center;
      
 }
+.novedades-img--details{
+    display: flex;
+    flex-direction: column;
+    transition: all 0.25s;
+    border-radius: 10px;
+    cursor: pointer;
+}
+.novedades-img--details:hover{
+    transform: translateY(-15px);
+    box-shadow: 0 12px 16px rgba(0, 0, 0, 0.2);
+  }
 .novedades-img{
     display: grid;
     grid-template-columns: auto auto auto auto;
@@ -73,9 +131,9 @@
         flex-direction: column;
     }
     .novedades-img--details span{
-        display: flex;
-        justify-content: center;
+        text-align: center;
         font-size: $fontSize;
+        margin-bottom: 10px;
     }
 }
 .novedades-img img{
@@ -83,4 +141,96 @@
     height: $cardHeight;
 }
 
+.modal{
+opacity: 0;
+visibility: hidden;
+position: fixed;
+z-index: 1000;
+width: 100%;
+height: 100vh;
+top: 0;
+left: 0;
+background: rgba(0,0,0, 0.5);
+display: flex;
+justify-content: center;
+align-items: center;
 
+}
+.modal-details{
+    width: 40%;
+    height: 50%;
+    background: #ffffff;
+    width: 50%;
+    height: 60%;
+    border-radius: 10px;
+    position: relative;
+    transition: transform 1s;
+    transform: translateY(0%);
+    /*overflow: hidden;*/
+}
+.modal-details-close{
+    transform: translateX(200%);
+}
+.close{
+    position: absolute;
+    margin: 0px;
+    top: 2%;
+    left: 93%;
+    display: inline-block;
+    height: 37px;
+    
+    color: 000000;
+    font-size: 28px;
+    line-height: 25px;
+    cursor: pointer
+   
+   
+}
+.modal-details h2{
+    text-align: center;
+    margin-top: 10%;
+    
+}
+.modal-details a{
+    font-size: $fontSize;
+    display: flex;
+    justify-content: center;
+    margin: 0% 35% 10%;
+    text-decoration: none;
+    color: $colorText1;
+    width: 25%;
+    padding: $tenSize;
+    background-color: $btnColor;
+    border-radius: $tenSize;
+    border: $threeSize $btnColor;
+    filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25))
+}
+.modal-details a img{
+    width: 30px;
+    height: 24px;
+    margin-right: $twentySize
+}
+.modal-details--info{
+    display: flex;
+    height: 50%;
+    position: relative;
+}
+.modal-details--info span{
+    position: absolute;
+    left: 56%;
+    font-size: 22px;
+}
+.modal-details--info h3{
+    position: relative;
+    top: 10%;
+    left: 18%;
+}
+.modal-details--info p{
+    position: relative;
+    top: 27%;
+    width: 50%;
+    right: 10%;
+}
+.modal-details--info img{
+    height: 90%;
+}
