--- a/css/Sass/_responsiveHome.scss
+++ b/css/Sass/_responsiveHome.scss
@@ -106,7 +106,7 @@
     .carrousel {
       display: flex;
       justify-content: center;
-      width: 131%;
+      width: 100%;
     }
     .masVendido {
       display: flex;
@@ -158,7 +158,7 @@
     
   }
   
-  @media screen and (max-width: 480px) {
+  @media screen and (max-width: 425px) {
      .carrousel{
         width: 100%;
      } 
@@ -382,7 +382,7 @@
         margin-bottom: 90px;
         margin-left: 45px;
     }
-.rubores-firstBlock--details img {
+    .rubores-firstBlock--details img {
     width: 140px;
     height: 130px;
     }
@@ -416,9 +416,9 @@
         margin-bottom: 90px;
         margin-left: 45px;
     }
-.delineadores-firstBlock--details img {
-    width: 140px;
-    height: 130px;
+    .delineadores-firstBlock--details img {
+        width: 140px;
+        height: 130px;
     }
     .delineadores-firstBlock--details span{
         font-size: 14px;
@@ -426,12 +426,85 @@
     .delineadores-firstBlock--details a{
         font-size: 17px;
         width: 90px;
-        padding: 5px;
+        padding: 5px 5px 5px 18px;
         margin: 5px 0px 0px 26px;
     }
     .delineadores-firstBlock--details a img{
         width: 40px;
-    height: 29px;
-    margin-right: 14px;
+        height: 29px;
+        margin-left: -10px;
+    }
+
+    /*SOMBRAS*/
+    .sombras .sombras-firstBlock{
+        display: grid;
+        grid-template-columns: auto;
+        grid-gap: 49px 11px;
+       }
+       .sombras-firstBlock--details{
+        margin-bottom: 90px;
+        margin-left: 45px;
+    }
+
+    .sombras-firstBlock--details img{
+        width: 140px;
+        height: 130px;
+    }
+    .sombras-firstBlock--details span{
+        font-size: 14px;
+    }
+    .sombras-firstBlock--details a{
+        margin: 5px 0px 0px 18px;
+        font-size: 20px;
+        width: 130px;
+        padding: 7px;
+    }
+    /*LABIALES*/
+    .labiales .labiales-firstBlock{
+        display: grid;
+        grid-template-columns: auto;
+        grid-gap: 49px 11px;
+       }
+       .labiales-firstBlock--details{
+        margin-bottom: 90px;
+        margin-left: 45px;
+    }
+
+    .labiales-firstBlock--details img{
+        width: 140px;
+        height: 130px;
+    }
+    .labiales-firstBlock--details span{
+        font-size: 14px;
+    }
+    .labiales-firstBlock--details a{
+        margin: 5px 0px 0px 18px;
+        font-size: 20px;
+        width: 130px;
+        padding: 7px;
+    }
+    /*ESMALTES*/
+    .esmaltes .esmaltes-firstBlock{
+        display: grid;
+        grid-template-columns: auto;
+        grid-gap: 49px 11px;
+       }
+       .esmaltes-firstBlock--details{
+        margin-bottom: 90px;
+        margin-left: 45px;
+    }
+
+    .esmaltes-firstBlock--details img{
+        width: 140px;
+        height: 130px;
+    }
+    .esmaltes-firstBlock--details span{
+        font-size: 14px;
+    }
+    .esmaltes-firstBlock--details a{
+        margin: 5px 0px 0px 18px;
+        font-size: 20px;
+        width: 130px;
+        padding: 7px;
     }
 }
